--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
 	<div class="admin-container">
 	<h2 style="font-family: 'Oswald', sans-serif;">Welcome to San Ligtas</h2>
 		<button onclick="document.getElementById('id01').style.display='block'">MAIN ADMIN</button>
-		<button onclick="document.getElementById('id02').style.display='block'">EVACUATION ADMIN</button>
+		<button onclick="document.getElementById('id02').style.display='block'">RELIEF ADMIN</button>
 		<button onclick="document.getElementById('id03').style.display='block'">SOCIAL WORKER ADMIN</button>
 	</div>
 
