--- a/templates/user-result.html
+++ b/templates/user-result.html
@@ -5,9 +5,9 @@
 
 	<div class="title">
 		<h4>USER MANAGEMENT</h4>
-		<span>Home / Users / <b> View </b></span>
+		<span>Home / Users / <b> Result </b></span>
 
-     <div class="search-container">
+    <div class="search-container">
       <form action="{{ url_for('search_user') }}" method="post">
         <input type="text" name="keyword" placeholder="Search user.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
