--- a/static/css/mainadmin.css
+++ b/static/css/mainadmin.css
@@ -4,6 +4,40 @@ body {
   background-color: #f3f3f4; 
 }
 
+
+/*#map_canvas {
+	height: 100%;
+}
+
+*/
+
+.search-container {
+  float: right;
+  z-index: -5;
+}
+
+
+.search-container button {
+  float: right;
+  padding: 0px 10px;
+  border-bottom: 1px solid #4b535b;
+  /*margin-top: 8px;*/
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  /*border: none;*/
+  cursor: pointer;
+}
+
+.search-container input[type=text] {
+	z-index: -5;
+	font-size: 15px;
+}
+
+.search-container button:hover {
+  background: #ccc;
+}
+
 #navbar {
   	width: 100%;
   	float: left;
@@ -13,6 +47,7 @@ body {
    	margin-bottom: 20px;
    	top: 0;
    	position: fixed;
+   	z-index: 1;
 }
 
 #navbar img {
@@ -116,6 +151,17 @@ a {
 	background-color: #747981;
 }
 
+.dropdown-settings {
+	display: none;
+	position: absolute;
+	min-width: 200px;
+	right: 0px;
+	margin-right: 45px;
+	margin-top: 0px;
+	z-index: 3;
+	background-color: #747981;
+}
+
 .dropdown a {
 	padding-top: 11px;
 	padding-bottom: 11px;
@@ -128,14 +174,36 @@ a {
 	border-left: 5px solid #19aa8d;
 }
 
+.dropdown-settings a {
+	padding-top: 11px;
+	padding-bottom: 11px;
+	padding-left: 10px;
+	color:white;
+	text-decoration: none;
+	display: block;
+	font-size: 13px;
+	border-bottom: 1px solid #4d5158;
+	border-left: 5px solid #19aa8d;
+}
+
+
+
+.dropdown-settings a:hover {
+	/*opacity: 0.8;*/
+	background-color: #343a40;
+	border-left: 2px solid #19aa8d;
+	color: white;
+}
 
 .dropdown a:hover {
 	/*opacity: 0.8;*/
 	background-color: #343a40;
 	border-left: 2px solid #19aa8d;
 	color: white;
+}
 
-
+.settings:hover .dropdown-settings {
+	display: block;
 }
 
 .users:hover .dropdown {
@@ -607,6 +675,7 @@ button {
 	border-top: 5px solid #e7eaec;
 	border-bottom: 5px solid #e7eaec;
 	margin-bottom: 50px;
+	
 }
 
 
@@ -628,6 +697,8 @@ button {
 
 
 
+
+
 .add-form {
 	position: relative;
 	margin-left: 0 auto;
@@ -642,12 +713,17 @@ button {
 	margin: 10px;
 }
 
+.holder h4 {
+	padding-left: 20px;
+	color:  #717476;
+	
+}
 
 
 .form-holder h2 {
   padding-top: 12px;
-  padding-bottom: 12=px;
-  text-align: left;
+  padding-bottom: 12px;
+  text-align: center;
   background-color: white;
   color:  #717476;
   padding-left: 20px;
@@ -776,3 +852,19 @@ form {
   cursor: pointer;
 }
 
+@media screen and (max-width: 600px) {
+  .search-container {
+    float: none;
+  }
+  .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
