--- a/templates/edit-user.html
+++ b/templates/edit-user.html
@@ -12,23 +12,23 @@
     <div class="add-form">
       <form action="{{ url_for('update_user', public_id=public_id) }}" method="post" xmlns="http://www.w3.org/1999/html">
         <div class="form1">
-          <label for="username"><b>Username</b></label>
+          <!-- <label for="username"><b>Username</b></label> -->
           <input type="text" placeholder="{{ username }}" name="username" required>
             
-          <label for="email"><b>Email</b></label>
+          <!-- <label for="email"><b>Email</b></label> -->
           <input type="text" placeholder="{{ email }}" name="email" required>
         </div>
 
         <div class="form2">
-          <label for="first_name"><b>First Name</b></label>
+          <!-- <label for="first_name"><b>First Name</b></label> -->
           <input type="text" placeholder="{{ first_name }}" name="first_name" required>
              
-          <label for="last_name"><b>Last name</b></label>
+          <!-- <label for="last_name"><b>Last name</b></label> -->
           <input type="text" placeholder="{{ last_name }}" name="last_name" required>
         </div>
 
          <div class="form3">
-          <label for="role"><b>Role</b></label>
+          <!-- <label for="role"><b>Role</b></label> -->
           <select name="role">
             <option>Select Role</option>
             <option value="Main Admin">Main Admin</option>
@@ -36,7 +36,7 @@
             <option value="Social Worker Admin">Social Worker Admin</option>
           </select>
             
-          <label for="password"><b>Gender</b></label>
+          <!-- <label for="password"><b>Gender</b></label> -->
           <select name="gender">
             <option value="Male">Male</option>
             <option value="Female">Female</option>
@@ -46,7 +46,7 @@
 
         <div class="submit-button">  
           <button style="background-color: #1ab394;" type="submit">Submit</button>
-          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('viewuser') }}">Cancel</a></button>
+          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('viewprofile', username = "{{username}}" , public_id=public_id) }}">Cancel</a></button>
         </div>
       </form>
      </div>
