--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -25,8 +25,8 @@
 <div class="w3-sidebar w3-light-#343a40; w3-bar-block" style="width: 225px; z-index: 2; background-color:#343a40; position: fixed; top:0;">
 	<div class="name">
 		<img src="/static/img/avatarq.png" align="left" />
-		<h1>{{ session['first_name'] }} {{ session['last_name'] }}</h1>
-		<p>Main Admin</p>
+		<h1><a href="{{ url_for('ownprofile') }}">{{ session['first_name'] }} {{ session['last_name'] }}</a></h1>
+		<p>{{ session['role'] }}</p>
 	</div>
 
 	<div class="users">
@@ -35,8 +35,6 @@
 		<div class="dropdown">
 			<a href="/add/user/admin">Add Users</a>
 			<a href="/view-user">View Users</a>
-			<a href="/view-user">Update Users</a>
-			<a href="/view-user">Delete Users</a>
 		</div>
 	</div>
 	
@@ -62,14 +60,13 @@
 		<div class="dropdown">
 			<a href="/view/center">View Center</a>
 			<a href="/add/center">Add Center</a>
-			<a href="/view/center">Update Center</a>
 			<a href="/view/center">Assign Users</a>
 		</div>
 	</div>
 
 	<div class="maps">
 		<img src="/static/img/maps.png" align="left" />
-		<h1><a href="#">Map</a></h1>
+		<h1><a href="/maps">Map</a></h1>
 	</div>
 
 	<div class="stats">
