--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -18,32 +18,27 @@
   <ul>
   	<li><div class="logout"><a href="{{ url_for('logout') }}">Log out</a></div></li>
   	<li><img src="/static/img/logout.png" align="right"/></li>
-
   	<li><div class="welcome">Welcome, {{ session['user'] }}</div></li>
-
 
 </div>
 
 <div class="w3-sidebar w3-light-#343a40; w3-bar-block" style="width: 225px; z-index: 2; background-color:#343a40; position: fixed; top:0;">
 	<div class="name">
 		<img src="/static/img/avatarq.png" align="left" />
-		<h1>{{ session['first_name'] }} {{ session['last_name'] }}</h1>
-		<p>Main Admin</p>
+		<h1><a href="{{ url_for('ownprofile') }}">{{ session['first_name'] }} {{ session['last_name'] }}</a></h1>
+		<p>{{ session['role'] }}</p>
 	</div>
 
 	<div class="users">
 		<img src="/static/img/users.png" align="left" />
-		<h1><a href="#">Users > </a></h1>
+		<h1><a href="#">Users &nbsp  &nbsp  &nbsp &nbsp &nbsp &nbsp > </a></h1>
 		<div class="dropdown">
-
-			<a href="/add/user/admin">Add Users</a>
-
-			<a href="/view-user">View Users</a>
-			<a href="/view-user">Update Users</a>
-			<a href="/view-user">Delete Users</a>
+			<a href="/view/admin">Admin</a>
+			<a href="/view/mobile">Mobile</a>
+			<a href="/view/evacuees">Evacuee</a>
 		</div>
 	</div>
-
+	
 
 	<div class="messages">
 		<img src="/static/img/messages.png" align="left" />
@@ -62,30 +57,17 @@
 
 	<div class="evacs">
 		<img src="/static/img/evacs.png" align="left" />
-
-		<h1><a href="#">Evacuation > </a></h1>
+		<h1><a href="#">Evacuation &nbsp &nbsp > </a></h1>
 		<div class="dropdown">
 			<a href="/view/center">View Center</a>
 			<a href="/add/center">Add Center</a>
-			<a href="/view/center">Update Center</a>
 			<a href="/view/center">Assign Users</a>
 		</div>
-
 	</div>
-
-	<div class="evacuees">
-		<img src="/static/img/users.png" align="left"/>
-		<h1><a href="#">Evacuees > </a></h1>
-		<div class="dropdown">
-			<a href="/evacuees/add">New Evacuees</a>
-			<a href="/view-evacuees">View Evacuees</a>
-		</div>			
-	</div>
-
 
 	<div class="maps">
 		<img src="/static/img/maps.png" align="left" />
-		<h1><a href="#">Map</a></h1>
+		<h1><a href="/maps">Map</a></h1>
 	</div>
 
 	<div class="stats">
