--- a/templates/user-result.html
+++ b/templates/user-result.html
@@ -4,27 +4,17 @@
 <div class="content-holder">
 
 	<div class="title">
-		<h4>USER MANAGEMENT</h4> 
-		<span>Home / Users / Admin / <b> View </b></span>
+		<h4>USER MANAGEMENT</h4>
+		<span>Home / Users / <b> Result </b></span>
 
-    
-
-
-     <div class="search-container">
-      
+    <div class="search-container">
       <form action="{{ url_for('search_user') }}" method="post">
         <input type="text" name="keyword" placeholder="Search user.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
     </div>
-
-     
 	</div>
 
-<div class="action-holder">
-          <a href="/add/user/admin"><img src="/static/img/add-user.png" width="30" height="30" style="margin: 5px;" align="left"  /></a>
-          <!-- <h1><a href="#">Evacuation &nbsp &nbsp > </a></h1> -->
-</div>
 
 <div class="holder">
 <div class="table">
@@ -49,7 +39,7 @@
     <td> {{ user.email }}</td>
 
     <td style="position: relative; display: flex; ">
-      <a href = "{{ url_for('viewprofile_admin',public_id=user.public_id, username=user.username) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
+      <a href = "{{ url_for('viewprofile',public_id=user.public_id, username=user.username) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
       
     </td>
 
@@ -60,7 +50,7 @@
           <span class="close">&times;</span>
           <p>Are you sure to delete this user?</p>
           <div style="position: relative; display: flex; justify-content: center;" >
-          <button style="background-color:#de0020;"><a href="{{ url_for('delete_admin', public_id=public_id) }}">Yes</a></button>
+          <button style="background-color:#de0020;"><a href="{{ url_for('delete_user', public_id=public_id) }}">Yes</a></button>
           <button style="background-color: #0bbc94;"><a href="{{ url_for('viewuser') }}">No</a></button>
         </div>
   </div> 
