--- a/templates/change-password.html
+++ b/templates/change-password.html
@@ -11,7 +11,7 @@
       <div class="settings">
           <img src="/static/img/settings.png" width="30" height="30" style="margin: 5px;" align="right"  />
           <div class="dropdown-settings">
-            <a href="{{ url_for('update_user', public_id=public_id ) }}">Edit Profile</a>
+            <a href="{{ url_for('update_admin', public_id=public_id ) }}">Edit Profile</a>
             <a href="{{ url_for('change_pass', public_id=public_id )}}">Change Password</a>
             <a id="myBtn" href="#">Delete Profile</a>
       </div>
@@ -38,7 +38,7 @@
     
         <div class="submit-button">  
           <button style="background-color: #1ab394;" type="submit">Submit</button>
-          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('viewprofile', username = "{{username}}" , public_id=public_id) }}">Cancel</a></button>
+          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('viewprofile_admin', username = "{{username}}" , public_id=public_id) }}">Cancel</a></button>
         </div>
       </form>
      </div>
