--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -33,8 +33,9 @@
 		<img src="/static/img/users.png" align="left" />
 		<h1><a href="#">Users &nbsp  &nbsp  &nbsp &nbsp &nbsp &nbsp > </a></h1>
 		<div class="dropdown">
-			<a href="/add/user/admin">Add Users</a>
-			<a href="/view-user">View Users</a>
+			<a href="/view/admin">Admin</a>
+			<a href="/view/mobile">Mobile</a>
+			<a href="/view/evacuees">Evacuee</a>
 		</div>
 	</div>
 	
