--- a/templates/view-evac.html
+++ b/templates/view-evac.html
@@ -16,6 +16,10 @@
 
 	</div>
 
+<div class="action-holder">
+          <a href="/add/center"><img src="/static/img/add-location.png" width="30" height="30" style="margin: 5px;" align="left"  /></a>
+          <!-- <h1><a href="#">Evacuation &nbsp &nbsp > </a></h1> -->
+</div>
 
 <div class="holder">
 <div class="table">
