--- a/templates/assign_admin.html
+++ b/templates/assign_admin.html
@@ -6,7 +6,7 @@
 
 	<div class="title">
 		<h4>EVACUATION CENTER</h4>
-		<span>Home / Evacuaton / View / <b> {{ name }} </b> </span> 
+		<span>Home / Evacuation / View / <b> {{ name }} </b> </span> 
 		<div class="action-icon">
 		<span><p><a href = "{{ url_for('update_center', public_id=public_id ) }}">edit</a></p> | <a href="#"><p id="myBtn">delete</p></a>
 </span>
@@ -14,7 +14,15 @@
 	</div>
 
 	
-
+<div style="float: left;" class="search-container">
+      
+      <form action="{{ url_for('search_admin', name=name, public_id=public_id) }}" method="post">
+        <input style="margin-top: 20px; margin-left: 20px;" type="text" name="keyword" placeholder="Search user.." name="search">
+        <button style="margin-top: 20px;" type="submit"><i class="fa fa-search"></i></button>
+      </form>
+    </div>
+<br>
+<br>
 
   <div class="information-holder">
   	<h4>ASSIGN ADMIN</h4>
@@ -35,88 +43,14 @@
     </div>
   </div>
 
-  <div class="map-holder">
-  	<div id="googleMap" style="width:100%;height:400px;"></div>
-  </div>
-
+  
 
 
 </div>
 
-<div id="myModal" class="modal">
-      <!-- Modal content -->
-        <div class="modal-content" >
-          <span class="close">&times;</span>
-          <p>Are you sure to delete this center?</p>
-          <div style="position: relative; display: flex; justify-content: center;" >
-          <button style="background-color:#de0020;"><a href="{{ url_for('delete_evac', public_id=public_id) }}">Yes</a></button>
-          <button style="background-color: #0bbc94;"><a href="{{ url_for('view_spec_center', name=name, public_id=public_id) }}" >No</a></button>
-        </div>
-  </div> 
-
 
 </div>
 
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script> 
-
-<script>
-function myMap() {
-var mapProp= {
-  center:new google.maps.LatLng('{{ latitude }}','{{ longitude }}'),
-  zoom:17,
-  gestureHandling: 'cooperative'
-};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-var marker = new google.maps.Marker({
-          position: locationRio,
-          map: map,
-          title: 'Hello World!'
-        });
-}
-</script>
-<!-- 
-<script>
-      function initMap() {
-        var locationRio = {lat: -22.915, lng: -43.197};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 13,
-          center: locationRio,
-          gestureHandling: 'cooperative'
-        });
-        var marker = new google.maps.Marker({
-          position: locationRio,
-          map: map,
-          title: 'Hello World!'
-        });
-      }
-    </script> -->
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAayoLLtuuXjGtgaxIURWpfzRrGDZ1KgVc&callback=myMap"></script>
 
 {% endblock %}
