--- a/templates/view-evacuees.html
+++ b/templates/view-evacuees.html
@@ -4,27 +4,22 @@
 <div class="content-holder">
 
 	<div class="title">
-		<h4>USER MANAGEMENT</h4> 
-		<span>Home / Users / Admin / <b> View </b></span>
-
-    
-
+		<h4>USER MANAGEMENT</h4>
+		<span>Home / Users / Evacuees / <b> View </b></span>
 
      <div class="search-container">
-      
       <form action="{{ url_for('search_user') }}" method="post">
         <input type="text" name="keyword" placeholder="Search user.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
     </div>
-
-     
 	</div>
 
-<div class="action-holder">
-          <a href="/add/user/admin"><img src="/static/img/add-user.png" width="30" height="30" style="margin: 5px;" align="left"  /></a>
+  <div class="action-holder">
+          <a href="{{ url_for('add_evacuee') }}"><img src="/static/img/add-user.png" width="30" height="30" style="margin: 5px;" align="left"  /></a>
           <!-- <h1><a href="#">Evacuation &nbsp &nbsp > </a></h1> -->
 </div>
+
 
 <div class="holder">
 <div class="table">
@@ -32,24 +27,28 @@
 
 	<div class="column">
 		<tr>
-		  	<th>USERNAME</th>
-        <th>NAME</th>
+		<th>NAME</th>
+        <th>ADDRESS</th>
         <th>GENDER</th>
-        <th>ROLE</th>
-		    <th>EMAIL</th>
+        <th>AGE</th>
+		<th>RELIGION</th>
+		<th>EDUC ATTAINMENT</th>
+		<th>OCCUPATION</th>
         <th>VIEW</th>
 		  </tr>
 	</div>
   {% for user in json_data.data %}
   <tr>
-    <td> {{ user.username }}</td>
-    <td> {{ user.first_name }} {{ user.last_name }}</td>
+    <td> {{ user.name }}</td>
+    <td> {{ user.address }}</td>
     <td> {{ user.gender }}</td>
-    <td> {{ user.role }}</td>
-    <td> {{ user.email }}</td>
+    <td> {{ user.age }}</td>
+    <td> {{ user.religion }}</td>
+    <td> {{ user.educ_attainment }}</td>
+    <td> {{ user.occupation }}</td>
 
     <td style="position: relative; display: flex; ">
-      <a href = "{{ url_for('viewprofile_admin',public_id=user.public_id, username=user.username) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
+      <a href = "{{ url_for('viewprofile_evacuee', home_id=user.home_id, name=user.name) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
       
     </td>
 
