--- a/templates/center-result.html
+++ b/templates/center-result.html
@@ -5,21 +5,17 @@
 
 	<div class="title">
 		<h4>EVACUATION CENTER</h4>
-		<span>Home / Evacuaton / <b> View </b></span>
+		<span>Home / Evacuaton / <b> Result </b></span>
 
     <div class="search-container">
       <form action="{{ url_for('search_center') }}" method="post">
-        <input style="z-index: -5;" type="text" name="keyword" placeholder="Search center.." name="search">
+        <input type="text" name="keyword" placeholder="Search.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
     </div>
 
 	</div>
 
-<div class="action-holder">
-          <a href="/add/center"><img src="/static/img/add-location.png" width="30" height="30" style="margin: 5px;" align="left"  /></a>
-          <!-- <h1><a href="#">Evacuation &nbsp &nbsp > </a></h1> -->
-</div>
 
 <div class="holder">
 <div class="table">
