--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,8 +10,8 @@
   </div>
 
 
-  <div style="height: 250px; margin-top: 50px;" class="information-holder">
-    <h4>Statistics and Frequency</h4>
+  <div style="height: 250px; margin-top: 50px; border-top: 5px solid #9ca4a9; border-bottom: 5px solid #9ca4a9; background-color: #4a525b;" class="information-holder">
+    <h4 style="color: #cdcdcd;">Statistics and Frequency</h4>
     <div id="bar-chart" style="height: 168px; margin-top: 0px;">
   <div class="graph" style="height: 154px;">
     <ul class="x-axis" style="height: 6px;">
@@ -75,17 +75,17 @@
   </div>
 
 
-  <div style="height: 250px; margin-top: 50px;" class="information-holder2">
-    <h4>Weather</h4>
+  <div style="height: 250px; margin-top: 50px; border-top: 5px solid #9ca4a9; border-bottom: 5px solid #9ca4a9; background-color: #4a525b;" class="information-holder2">
+    <h4 style="color: #cdcdcd;">Weather</h4>
     <hr style="margin-top: 0px; margin-bottom: 10px;">
     <div class="weather-container">
       <div class="icon"><img src="http://openweathermap.org/img/w/{{ weather_icon }}.png"></div>
-      <h5>{{ city }} City</h5>
-      <h5>{{ celcius }} &#8451; - {{ weather }} </h5>
+      <h5 style="color: #cdcdcd;">{{ city }} City</h5>
+      <h5 style="color: #cdcdcd;">{{ celcius }} &#8451; - {{ weather }} </h5>
     </div>
   </div>
 
-  <div style="" class="holder">
+  <div style="border-top: 5px solid #9ca4a9; border-bottom: 5px solid #9ca4a9;" class="holder">
     <div id="map_div" style="width: 100%; height: 450px;"></div>
   </div>
 
