add no. of goods per center

--- a/templates/add-evac.html
+++ b/templates/add-evac.html
@@ -34,7 +34,7 @@
 
         <div class="submit-button">  
           <button style="background-color: #1ab394;" type="submit">Submit</button>
-          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate">Cancel</button>
+          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('view_center') }}">Cancel</a></button>
         </div>
       </form>
     </div>
