--- a/static/css/mainadmin.css
+++ b/static/css/mainadmin.css
@@ -4,6 +4,12 @@ body {
   background-color: #f3f3f4; 
 }
 
+.square {
+  height: 20px;
+  width: 25px;
+  margin-left: 60px;
+}
+
 
 .icon  {
 	text-align: center;
@@ -24,7 +30,7 @@ body {
 	font-size: 18px;
 	margin-left: 20px;
 	text-align: center;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	
 }
 
