--- a/static/css/plot.css
+++ b/static/css/plot.css
@@ -1,6 +1,6 @@
 body {
   /*background-color: #324a60;*/
-  font-family: arial, sans-serif;
+  /*font-family: arial, sans-serif;*/
   color: #cdcdcd;
 }
 
