--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="dashboard">
-		<img src="/static/img/messages.png" align="left" />
+		<img src="/static/img/dashboard.png" align="left"  />
 		<h1><a href="{{ url_for('mainadminhome', username=session['user'], first_name=session['first_name'], last_name=session['last_name']) }}">Dashboard</a></h1>
 	</div>
 
@@ -53,7 +53,7 @@
 	
 	<div class="updates">
 		<img src="/static/img/updates.png" align="left" />
-		<h1><a href="#">Updates</a></h1>
+		<h1><a href="/relief/updates">Updates</a></h1>
 	</div>
 
 	<div class="alerts">
