--- a/templates/profile-mobile.html
+++ b/templates/profile-mobile.html
@@ -52,7 +52,7 @@ profile-mobile.html{% extends "mainadmin-base.html" %}
       <!-- Modal content -->
         <div class="modal-content" >
           <span class="close">&times;</span>
-          <p>Are you sure to delete this user?</p>
+          <p style="color: #717476;">Are you sure to delete this user?</p>
           <div style="position: relative; display: flex; justify-content: center;" >
           <button style="background-color:#de0020;"><a href="{{ url_for('delete_mobile', public_id=json_data.public_id) }}">Yes</a></button>
           <button style="background-color: #0bbc94;"><a href="{{ url_for('viewprofile_mobile', username=json_data.username, public_id=json_data.public_id) }}" >No</a></button>
