--- a/templates/stat-freq.html
+++ b/templates/stat-freq.html
@@ -9,8 +9,8 @@
     <h4>STATISTICS AND FREQUENCY</h4> 
   </div>
 
-
-  <div style="height: 400px; width: 90%; margin-top: 50px; margin-left: 50px;" class="information-holder">
+  
+  <div style="height: 400px; width: 90%; margin-top: 30px; margin-left: 50px;  border-top: 5px solid #9ca4a9; border-bottom: 5px solid #9ca4a9; background-color: #4a525b;" class="information-holder">
     <div id="bar-chart" style="">
   <div class="graph" style="width: 700px;">
     <ul class="x-axis" style="">
@@ -74,7 +74,9 @@
   </div>
 
 
-
+<h4 style="margin-left: 30px; color: #6c7884; font-size: 17px;">LEGEND:</h4>
+  <span style="margin-left: 60px; color: #6c7884;">Female<div style="background-color: #ff4500;" class="square"></div></span>
+  <span style="margin-left: 60px; color: #6c7884;">Male<div style="background-color: #b8f123;" class="square"></div></span>
 
 </div>
 
